# Hermes-pro

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/runners/: docker-compose.yml  setup.sh
.github/security/: bandit-baseline.json  bandit-burndown-plan.md
.github/workflows/: brand-guard.yml  ci.yml  dependency-review.yml  docker-publish.yml  label-sync.yml  release.yml  runner-health.yml  sbom.yml  security.yml  stale.yml
docs/: deployment_profiles.md  operations_slos.md
docs/newsletters/: 2026-02-27-marktechpost-ai-dev-brief.md
schemas/: config.schema.json  extraction.schema.json  navigation_plan.schema.json  page_classification.schema.json  signals.schema.json
scripts/: check_license_consistency.py
server/ai_engine/: __init__.py  engine.py
server/api/: app.py  auth.py  routes.py  run_repository.py  run_service.py  validators.py
server/browser/: __init__.py  layer.py  obstruction.py
server/conduit/: __init__.py  engine.py  phases.py
server/config/: settings.py  url_policy.py
server/grounding/: search_api.py
server/pipeline/: __init__.py  extraction.py  heuristic.py  manager.py
server/signals/: __init__.py  emitter.py  types.py
tools/: validate_bandit_triage.py
(+12 files in other folders)
