[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes"
version = "2.0.0"
description = "Autonomous Web Intelligence Engine - Deterministic scraping with AI reasoning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "jsonschema>=4.23.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "google-cloud-aiplatform>=1.74.0",
    "structlog>=24.4.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
